# graphthrift

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/lib/: api.ts  (+2 more)
docs/: ARCHITECTURE.md  DEMO_RECORDING_SCRIPT.md  EXPLAINER.md  GITHUB.md  OUTREACH.md  PRD.md  REAL_MODEL_RUN.md
examples/: graphiti_quickstart.py
graphthrift/: __init__.py  cli.py  config.py  logging.py  runner.py
graphthrift/api/: __init__.py  app.py  deps.py  metrics.py  schemas.py  service.py
graphthrift/api/routers/: meta.py  runs.py
graphthrift/backends/: __init__.py  base.py  fake.py  ollama.py  openai_compat.py
graphthrift/demo/: __init__.py  graph.py  pipeline.py  prompts.py
graphthrift/eval/: __init__.py  gate.py  metrics.py
graphthrift/instrument/: __init__.py  engine.py  pricing.py  tracing.py
graphthrift/integrations/: __init__.py  graphiti.py
graphthrift/optimize/: __init__.py  cache.py  compressor.py  config.py  dedup_prefilter.py  edge_batcher.py  router.py
graphthrift/store/: __init__.py  db.py  models.py  repo.py
tests/: conftest.py  test_api.py  test_gate.py  test_metrics.py  test_optimizers.py  test_pipeline_and_runner.py
(+11 files in other folders)
