[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphthrift"
version = "0.1.0"
description = "Profile, optimize, and safely shrink the LLM cost & latency of knowledge-graph ingestion pipelines (Graphiti-first)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Anupam" }]
keywords = ["llm", "inference", "cost-optimization", "graphiti", "knowledge-graph", "rag", "evaluation", "observability"]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
graphiti = ["graphiti-core>=0.3"]
openai = ["openai>=1.30"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
graphthrift = "graphthrift.cli:app"

[project.urls]
Homepage = "https://github.com/anupam/graphthrift"
Issues = "https://github.com/anupam/graphthrift/issues"

[tool.hatch.build.targets.wheel]
packages = ["graphthrift"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
